# jump

./: .gitignore  CMakeLists.txt  dir.sh  jump.sh
include/: core.h  entry.h  list.h  ncurses_menu.h  parser.h  scan.h  utils.h
src/: CMakeLists.txt  core.c  list.c  main.c  ncurses_menu.c  parser.c  scan.c  utils.c
tests/: CMakeLists.txt  test_core.c  test_list.c  test_main.c  test_parser.c  test_scan.c  test_utils.c
